Make messagemanager-solace compile on Java 17